--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/vendors/container.css">
     <link rel="stylesheet" href="css/vendors/nav.css">
-    <link rel="stylesheet" href="css/vendors/grid_css.css">
     <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/vendors/fonts/font-awesome.min.css">
     <title>F.Pharmecy</title>
@@ -35,38 +34,38 @@
         <li><a href="#New_fau"><span>آخر الأخبار</span><span><i class="fa fa-2x fa-file-movie-o"></i></span></a></li>
         <li><a href="#contact"><span>اتصل بنا</span><span><i class="fa fa-2x fa-envelope"></i></span></a></li>
     </ul>
-    <div class="container" id="Info_home">
+    <div class="main" id="Info_home">
         <div class="center_1 cont-1" ></div>
-        <div class="content cont-2">
+        <div class="content-main cont-2">
             <div class="code_grid">
-                <div class="main">تسعى كلية الصيدلة إلى إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات</div>
-                <div class="details">كما تسعى النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع</div>
+                <div class="main-grid">تسعى كلية الصيدلة إلى إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات</div>
+                <div class="content-grid">كما تسعى النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع</div>
                 <div class="btn-more"><a href="#More">اقرأ المزيد</a></div>
             </div>
         </div>
-        <div class="content cont-3">
+        <div class="content-main cont-3">
             <div class="img_col_2"></div>
         </div>
-        <div class="content cont-4" id="More">
+        <div class="content-main cont-4" id="More">
             <div class="code_grid">
-                <div class="icon-more">الرؤية</div>
-                <div class="main">النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع</div>
-                <div class="details">تشجيع مختلف النشاطات الطلابية ، والعمل على تربية شخصية الطالب العلمية ، وتوجيهه نحو الاختيار الأمثل للفعالية التي يمارسها ، بما يتفق مع أهداف خدمة المجتمع</div>
+                <div class="title-grid">الرؤية</div>
+                <div class="main-grid">النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع</div>
+                <div class="content-grid">تشجيع مختلف النشاطات الطلابية ، والعمل على تربية شخصية الطالب العلمية ، وتوجيهه نحو الاختيار الأمثل للفعالية التي يمارسها ، بما يتفق مع أهداف خدمة المجتمع</div>
             </div>
         </div>
-        <div class="content cont-5">
+        <div class="content-main cont-5">
             <div class="code_grid">
-                <div class="icon-more">الرسالة</div>
-                <div class="main">تسعى كلية الصيدلة إلى تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات الدوائية في الجمهورية العربية السورية ، وكليات الصيدلة العربية والأجنبية ، بهدف تطوير البحث العلمي والدراسات العليا ، وتعريب التعليم الصيدلي في الوطن العربي، وتوحيد مناهج كليات الصيدلة العربية</div>
+                <div class="title-grid">الرسالة</div>
+                <div class="main-grid">تسعى كلية الصيدلة إلى تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات الدوائية في الجمهورية العربية السورية ، وكليات الصيدلة العربية والأجنبية ، بهدف تطوير البحث العلمي والدراسات العليا ، وتعريب التعليم الصيدلي في الوطن العربي، وتوحيد مناهج كليات الصيدلة العربية</div>
             </div>
         </div>
-        <div class="content cont-6">
+        <div class="content-main cont-6">
             <div class="img_col_3"></div>
         </div>
-        <div class="content cont-7">
+        <div class="content-main cont-7">
             <div class="code_grid">
-                <div class="icon-more">الأهداف</div>
-                <div class="main">1- إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات
+                <div class="title-grid">الأهداف</div>
+                <div class="main-grid">1- إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات
                     <br>2- 
                     تطوير وسائل البحث والتعليم وأصول التدريس، ووضع المؤلفات العلمية الجامعية والمرجعية وتوفيرها وإحداث المخابر اللازمة للبحث العلمي
                     <br>3- 
@@ -77,30 +76,30 @@
                 </div>
             </div>
         </div>
-        <div class="content cont-8">
+        <div class="content-main cont-8">
             <div class="img_col_4"></div>
         </div>
-        <div class="content cont-9" id="Senior_fau">
+        <div class="content-main cont-9" id="Senior_fau">
             <div class="code_grid">
-                <div class="icon-more">كلمة عميد الكلية</div>
-                <div class="main">
+                <div class="title-grid">كلمة عميد الكلية</div>
+                <div class="main-grid">
                     أبنائي وبناتي الأعزاء طلبة وطالبات اليوم صيادلة المستقبل
 تحية تقدير مني ومن جميع أعضاء كليتكم على تفوقكم ونجاحكم الباهر في المرحلة الماضية واليوم وقد التحقتم بكلية الصيدلة – جامعة حلب في المناطق المحررة فقد بدأتم أولى خطواتكم لمستقبل عظيم إن شاء الله في مهنة الصيدلة . وأطمئنكم أننا قد بذلنا وما نزال كل جهد لنوفر لكم أحدث وأرقى نظم التعليم الطبي مواكبين قدر المستطاع التطور السريع بأساليب واستراتيجيات التعليم على مستوى العالم تحقيقا لرسالة الكلية ومساهمة في رفع كفاءة الخدمات الطبية في المجتمع المحيط
                 </div>
-                <div class="details">وفـقـكم الله ورعـاكـم</div>
+                <div class="content-grid">وفـقـكم الله ورعـاكـم</div>
                 <div class="sign">عميد كلية الصيدلة
                 </div>
                 <div class="name-sign">أ. د. عثمان حجاوي</div>
             </div>
         </div>
-        <div class="content cont-10" id="Slice_fau">
+        <div class="content-main cont-10" id="Slice_fau">
             <div class="img_col_5"></div>
         </div>
-        <div class="content cont-11">
+        <div class="content-main cont-11">
             <div class="code_grid">
-                <div class="icon-more" >أقسام الكلية</div>
-                <div class="main">تتكون كلية الصيدلة في جامعة حلب في المناطق المحررة من الأقسام التالية</div>
-                <div class="details">
+                <div class="title-grid" >أقسام الكلية</div>
+                <div class="main-grid">تتكون كلية الصيدلة في جامعة حلب في المناطق المحررة من الأقسام التالية</div>
+                <div class="content-grid">
                     قسم الصيدلانيات والتكنولوجيا الصيدلية
                     <br>
                     قسم علم تأثير الأدوية والسموم
@@ -122,11 +121,11 @@
             </div>
         </div>
 
-        <div class="content cont-12" id="Plan_fau">
+        <div class="content-main cont-12" id="Plan_fau">
             <div class="code_grid">
-                <div class="icon-more">الخطة الدرسية</div>
-                <div class="main">تقوم الخطة الدرسية الموضوعة للطلاب للنهوض بهم من مرحلة الدراسية الأكاديمية إلى المرحلة العملية وفق برامج تخصصية ووفق آليات تعتمد على التجارب ضمن المخابر العملية والتي تضم</div>
-                <div class="details">
+                <div class="title-grid">الخطة الدرسية</div>
+                <div class="main-grid">تقوم الخطة الدرسية الموضوعة للطلاب للنهوض بهم من مرحلة الدراسية الأكاديمية إلى المرحلة العملية وفق برامج تخصصية ووفق آليات تعتمد على التجارب ضمن المخابر العملية والتي تضم</div>
+                <div class="content-grid">
                     مخبر الكيمياء العامة والعضوية
                     <br>
                     مخبر الكيمياء التحليلية والسموم
@@ -148,10 +147,10 @@
                 <div class="btn-more" style="  font-size: 18px;">تحميل الخطة التدرسية</div>
             </div>
         </div>
-        <div class="content cont-13">
+        <div class="content-main cont-13">
             <div class="code_grid">
-                <div class="icon-more">إنجازات الكلية</div>
-                <div class="main">1- تقوم رؤية كلية بناء الشراكات المستدامة ودعمها مع المشافي التعليمية والنظام الصحي ومختلف القطاعات الصحية المحلية والدولية بهدف تحسين الحالة الصحية للمجتمع السوري خاصة والإقليمي والدولي عامة
+                <div class="title-grid">إنجازات الكلية</div>
+                <div class="main-grid">1- تقوم رؤية كلية بناء الشراكات المستدامة ودعمها مع المشافي التعليمية والنظام الصحي ومختلف القطاعات الصحية المحلية والدولية بهدف تحسين الحالة الصحية للمجتمع السوري خاصة والإقليمي والدولي عامة
                     <br>2- 
                     تعمل عمادة كلية الصيدلة على تعزيز البحث العلمي وتأمين وسائله بحسب الإمكانات المتاحة من خلال التأكيد الدائم على أهمية البحث العلمي، وتقوم دائما على حثّ الشباب على تقديم أبحاث مستمرة إيمانًا منها بأهمية البحث العلمي في رفع كل من سويّة الباحث والكلية على حد سواء
                 <br>
@@ -159,9 +158,9 @@
                 </div>
             </div>
         </div>
-        <div class="content cont-14" id="New_fau">
+        <div class="content-main cont-14" id="New_fau">
             <div class="code_grid">
-                <div class="icon-more">آخر الآخبار </div>
+                <div class="title-grid">آخر الآخبار </div>
                 <div class="img_col_6"></div>
                 <div class="img_col_7"></div>
                 <div class="img_col_8"></div> 
@@ -170,15 +169,82 @@
                 <h1 class="h-3">0</h1>
             </div>
         </div>
-        <div class="content cont-15">
-            <div class="code_grid">
-                <div class="icon-more"> أخبارنا </div>
-                <div class="main"></div>
-                <div class="details"></div>
+        <div class="content-main cont-15">
+            <div class="content-image">
+                <div class="title-grid">آخبارنا </div>
+                <div class="row">
+                        <div class="blog-card">
+                            <input type="radio" name="select" id="tap-1" checked>
+                            <input type="radio" name="select" id="tap-2">
+                            <input type="radio" name="select" id="tap-3">
+                            <input type="radio" name="select" id="tap-4">
+                            <input type="radio" name="select" id="tap-5">
+                            <input type="checkbox" id="imgTap">
+                            <div class="sliders">
+                              <label for="tap-1" class="tap tap-1"></label>
+                              <label for="tap-2" class="tap tap-2"></label>
+                              <label for="tap-3" class="tap tap-3"></label>
+                              <label for="tap-4" class="tap tap-4"></label>
+                              <label for="tap-5" class="tap tap-5"></label>
+                            </div>
+                            <div class="inner-part">
+                                <label for="imgTap" class="img">
+                                  <img class="img-1" src="/img/img-4.jpg">
+                                </label>
+                                <div class="content content-1">
+                                  <span>1 November 2021</span>
+                                  <div class="title">تجهيز مخابر الكليات الطبية</div>
+                                  <div class="text">تم تجهيز مخابرالكليات الطبية وافتتاح مخبري الصيدلانيات والكيمياء الصيدلية بالتعاون مع منظمة تعليم بلا حدود.</div>
+                                </div>
+                            </div>
+                            <div class="inner-part">
+                                <label for="imgTap" class="img">
+                                  <img class="img-2" src="/img/img-10.jpg">
+                                </label>
+                                <div class="content content-2">
+                                  <span>28 April 2022</span>
+                                  <div class="title">افتتاح مسجد الكليات الطبية</div>
+                                  <div class="text">بالتعاون مع منظمة الأيادي البيضاء تم افتتاح مسجد الكليات الطبية ممثلة برئيس الجامعة وعمداء الكليات الطبية في مارع ودار الافتاء ومجلس ووجهاءالمدينة والفعاليات الثقافية والطلابية</div>
+                                </div>
+                            </div>
+                            <div class="inner-part">
+                                <label for="imgTap" class="img">
+                                  <img class="img-3" src="/img/img-2.jpg">
+                                </label>
+                                <div class="content content-3">
+                                  <span>7 May 2022</span>
+                                  <div class="title">حملة تشجير الكلية</div>
+                                  <div class="text">أطلقت عمادة الكلية بالتعاون مع مؤسسة تعليم بلا حدود واتحاد طلبة سوريا الأحرار حملة لتشجير وتجميل حدائق الكلية وقد ساهم في هذه الحملة عمداء الكليات الطبية والاداريين في الكلية وطلية تجمع الكليات الطبية. </div>
+                                </div>
+                            </div>
+                            <div class="inner-part">
+                              <label for="imgTap" class="img">
+                                <img class="img-4" src="/img/img-16.jpg">
+                              </label>
+                              <div class="content content-4">
+                                <span>1 June 2022</span>
+                                <div class="title">بدء الامتحانات العملية</div>
+                                <div class="text">بدأت الامتحانات العملية بإشراف مدرسي المواد النظرية والعملية بعد تجهيز المخابر والمعدات المخبرية من قبل أمناء المخابر كما أصدرت شعبة الامتحانات في الكلية نتائجها وفق لقوائم شؤون الطلاب في الكلية.</div>
+                                <button>متابعة النتائج</button>
+                              </div>
+                            </div>
+                            <div class="inner-part">
+                                <label for="imgTap" class="img">
+                                  <img class="img-5" src="/img/img-19.jpg">
+                                </label>
+                                <div class="content content-5">
+                                  <span>12 June 2022</span>
+                                  <div class="title">بدء الامتحانات النظرية</div>
+                                  <div class="text">بدأت الامتحانات النظرية بإشراف رئاسة الجامعة وعمداء الكليات الطبية وإدارة الكلية كما أصدرت شعبة الامتحانات في الكلية نتائجها وفق لقوائم شؤون الطلاب في الكلية.</div>
+                                  <button>متابعة النتائج</button>
+                                </div>
+                              </div>
+                          </div>
+                </div>
             </div>
         </div>
-        <div class="content cont-16" id="contact">
-            <div class="icon-more"> اتصل بنا </div>
+        <div class="content-main cont-16" id="contact">
+            <div class="title-grid"> اتصل بنا </div>
             <div class="row">
                 <div class="column col_12">
                     <div class="sticker">
@@ -220,5 +286,4 @@
         </div>
     </div>
 </body>
-
 </html>
