--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="جامعة حلب في المناطق المحررة كلية الصيدلة" content="كلية الصيدلة في جامعة حلب الحرة">
     <link rel="stylesheet" href="css/vendors/container.css">
     <link rel="stylesheet" href="css/vendors/nav.css">
     <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet" type="text/css">
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+    <!-- start nav bar width max 1200px -->
     <div class="nav_bar">
         <div class="img_nav"></div>
         <div class="dropdown" id="menu">
@@ -26,6 +28,8 @@
             </ul>
         </div>
     </div>
+    <!-- end nav bar width max 1200px -->
+    <!-- start nav bar width min 1200px -->
     <ul class="icon_mobile" id="menu_mobile">
         <li><a href="#Info_home"><span>الصفحة الرئيسية</span><span><i class="fa fa-2x fab fa-home"></i></span></a></li>
         <li><a href="#Senior_fau"><span>عمادة الكلية</span><span><i class="fa fa-2x fas fa-male"></i></span></a></li>
@@ -34,6 +38,9 @@
         <li><a href="#New_fau"><span>آخر الأخبار</span><span><i class="fa fa-2x fa-file-movie-o"></i></span></a></li>
         <li><a href="#contact"><span>اتصل بنا</span><span><i class="fa fa-2x fa-envelope"></i></span></a></li>
     </ul>
+    <!-- end nav bar width min 1200px -->
+    <!-- start main -->
+    <!-- start row 1 & 2-->
     <div class="main" id="Info_home">
         <div class="center_1 cont-1" ></div>
         <div class="content-main cont-2">
@@ -46,6 +53,7 @@
         <div class="content-main cont-3">
             <div class="img_col_2"></div>
         </div>
+        <!-- end row 1 & 2 -->
         <div class="content-main cont-4" id="More">
             <div class="code_grid">
                 <div class="title-grid">الرؤية</div>
@@ -158,6 +166,7 @@
                 </div>
             </div>
         </div>
+        <!-- satrt main can user update -->
         <div class="content-main cont-14" id="New_fau">
             <div class="code_grid">
                 <div class="title-grid">آخر الآخبار </div>
@@ -172,6 +181,7 @@
         <div class="content-main cont-15">
             <div class="content-image">
                 <div class="title-grid">آخبارنا </div>
+                <!-- start slide -->
                 <div class="row">
                         <div class="blog-card">
                             <input type="radio" name="select" id="tap-1" checked>
@@ -241,8 +251,10 @@
                               </div>
                           </div>
                 </div>
+                <!-- end slide -->
             </div>
         </div>
+                <!-- end main can user update -->
         <div class="content-main cont-16" id="contact">
             <div class="title-grid"> اتصل بنا </div>
             <div class="row">
@@ -285,5 +297,6 @@
             </div>
         </div>
     </div>
+    <!-- end main -->
 </body>
 </html>
