--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="code_grid">
                 <div class="main-grid">تسعى كلية الصيدلة إلى إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات</div>
                 <div class="content-grid">كما تسعى النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع</div>
-                <div class="btn-more"><a href="#More">اقرأ المزيد</a></div>
+                <div class="btn-more"><a href="https://www.facebook.com/Facultyofpharmacy1">اقرأ المزيد</a></div>
             </div>
         </div>
         <div class="content-main cont-3">
@@ -235,7 +235,7 @@
                                 <span>1 June 2022</span>
                                 <div class="title">بدء الامتحانات العملية</div>
                                 <div class="text">بدأت الامتحانات العملية بإشراف مدرسي المواد النظرية والعملية بعد تجهيز المخابر والمعدات المخبرية من قبل أمناء المخابر كما أصدرت شعبة الامتحانات في الكلية نتائجها وفق لقوائم شؤون الطلاب في الكلية.</div>
-                                <button>متابعة النتائج</button>
+                                <button><a href="https://t.me/pharmacyuniv"></a>متابعة النتائج</button>
                               </div>
                             </div>
                             <div class="inner-part">
@@ -246,7 +246,7 @@
                                   <span>12 June 2022</span>
                                   <div class="title">بدء الامتحانات النظرية</div>
                                   <div class="text">بدأت الامتحانات النظرية بإشراف رئاسة الجامعة وعمداء الكليات الطبية وإدارة الكلية كما أصدرت شعبة الامتحانات في الكلية نتائجها وفق لقوائم شؤون الطلاب في الكلية.</div>
-                                  <button>متابعة النتائج</button>
+                                  <button><a href="https://t.me/pharmacyuniv"></a>متابعة النتائج</button>
                                 </div>
                               </div>
                           </div>
