--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/vendors/nav.css">
     <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/vendors/fonts/font-awesome.min.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9892325294429698"
+    crossorigin="anonymous"></script>
     <title>F.Pharmecy</title>
 </head>
 
@@ -298,5 +300,16 @@
         </div>
     </div>
     <!-- end main -->
+
+<!-- reallife -->
+<ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-9892325294429698"
+    data-ad-slot="5115653126"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
