--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="جامعة حلب في المناطق المحررة كلية الصيدلة" content="كلية الصيدلة في جامعة حلب الحرة">
+    <meta name="description" content="كلية الصيدلة في جامعة حلب الحرة">
+    <meta name="description" content="  fau-pharmcy   ">
+    <meta name="description" content="https://facultyofpharmacy.netlify.app">
+    <meta name="apple-mobile-web-app-title" content="كلية الصيدلة في جامعة حلب الحرة">
+    <meta name="application-name" content="كلية الصيدلة في جامعة حلب الحرة">
     <link rel="stylesheet" href="css/vendors/container.css">
     <link rel="stylesheet" href="css/vendors/nav.css">
     <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet" type="text/css">
