--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta name="description" content="https://facultyofpharmacy.netlify.app">
     <meta name="apple-mobile-web-app-title" content="كلية الصيدلة في جامعة حلب الحرة">
     <meta name="application-name" content="كلية الصيدلة في جامعة حلب الحرة">
-    <link rel="stylesheet" href="css/vendors/container.css">
-    <link rel="stylesheet" href="css/vendors/nav.css">
+    <link rel="stylesheet" href="./css/container.css">
+    <link rel="stylesheet" href="./css/nav.css">
     <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/vendors/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">   
     <title>F.Pharmecy</title>
 </head>
 
@@ -203,7 +203,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                  <img class="img-1" src="/img/img-4.jpg">
+                                  <img class="img-1" src="./img/img-4.jpg">
                                 </label>
                                 <div class="content content-1">
                                   <span>1 November 2021</span>
@@ -213,7 +213,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                  <img class="img-2" src="/img/img-10.jpg">
+                                  <img class="img-2" src="./img/img-10.jpg">
                                 </label>
                                 <div class="content content-2">
                                   <span>28 April 2022</span>
@@ -223,7 +223,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                  <img class="img-3" src="/img/img-2.jpg">
+                                  <img class="img-3" src="./img/img-2.jpg">
                                 </label>
                                 <div class="content content-3">
                                   <span>7 May 2022</span>
@@ -233,7 +233,7 @@
                             </div>
                             <div class="inner-part">
                               <label for="imgTap" class="img">
-                                <img class="img-4" src="/img/img-16.jpg">
+                                <img class="img-4" src="./img/img-16.jpg">
                               </label>
                               <div class="content content-4">
                                 <span>1 June 2022</span>
@@ -244,7 +244,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                  <img class="img-5" src="/img/img-19.jpg">
+                                  <img class="img-5" src="./img/img-19.jpg">
                                 </label>
                                 <div class="content content-5">
                                   <span>12 June 2022</span>
